Lessons page mobile view

--- a/modules.html
+++ b/modules.html
@@ -105,15 +105,15 @@
         </div>
       </div>
 
-      <!-- the row with the carousel -->
-      <div class="row" style="min-height:1024px;">
+      <!-- tablet and fullscreen view -->
+      <div class="row d-none d-md-block" style="min-height:1024px;">
         <div class="col">
-          <div id="carouselExampleIndicators" class="carousel slide d-none d-md-block" data-ride="carousel" data-interval="false">
+          <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="false">
             <!-- <ol class="carousel-indicators">
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-          </ol> -->
+            </ol> -->
             <div class="carousel-inner">
 
               <!-- page 1 -->
@@ -267,7 +267,7 @@
                   <div class="col-md-6 col-lg-4 d-flex justify-content-center moduleColumn">
                     <div class="card" style="width: 18rem;">
                       <div class="container cardImgContainer">
-                        <img class="card-img-top" id="heightReference" src="/img/upstander.png" alt="Upstander">
+                        <img class="card-img-top" id="heightReference" src="/img/news.jpg" alt="Fake News">
                         <div class="card-img-overlay">
                           <span class="card-title moduleCardTitle">
                             News in Social Media
@@ -384,17 +384,268 @@
               </div>
 
             </div>
-          <!-- <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>-->
+
+          </div>
+
         </div>
       </div>
-    </div>
+
+      <!-- mobile view, no carousel -->
+      <div class="row d-sm-block d-md-none">
+        <div class="card" style="width: 18rem;">
+          <div class="container cardImgContainer">
+            <img class="card-img-top" id="heightReference" src="/img/upstander.png" alt="Upstander">
+            <div class="card-img-overlay">
+              <span class="card-title moduleCardTitle">
+                How to Be an Upstander
+              </span>
+            </div>
+          </div>
+          <div class="card-body">
+            <span class="card-text">
+              This lesson teaches how to detect signs of
+              cyberbullying and how to respond when seeing
+              cyberbullying happening to others.
+            </span>
+            <br>
+            <br>
+            <span class="card-text">
+              Aligned Common Sense Education's Digital
+              Citizenship Lesson:
+              <a href="https://www.commonsense.org/education/digital-citizenship/lesson/upstanders-and-allies-taking-action-against-cyberbullying" target="_blank">
+                Upstanders and Allies: Taking Action Against Cyberbullying
+              </a>
+            </span>
+          </div>
+        </div>
+      </div>
+      <div class="row paddedTop d-sm-block d-md-none">
+        <div class="card" style="width: 18rem;">
+          <div class="container cardImgContainer">
+            <img class="card-img-top" id="heightReference" src="/img/privateinfo.jpg" alt="Private Information">
+            <div class="card-img-overlay">
+              <span class="card-title moduleCardTitle">
+                Is It Private Information?
+              </span>
+            </div>
+          </div>
+          <div class="card-body">
+            <span class="card-text">
+              This lesson teaches what is safe to share with
+              different social media audiences and what
+              information is inappropriate to share.
+            </span>
+            <br>
+            <br>
+            <span class="card-text">
+              Aligned with Common Sense Education's Digital
+              Citizenship lesson:
+              <a href="https://www.commonsense.org/education/digital-citizenship/lesson/chatting-safely-online"  target="_blank">
+                Chatting Safely Online
+              </a>
+            </span>
+          </div>
+        </div>
+      </div>
+      <div class="row paddedTop d-sm-block d-md-none">
+        <div class="card" style="width: 18rem;">
+          <div class="container cardImgContainer">
+            <img class="card-img-top" id="heightReference" src="/img/digfoot.jpg" alt="Digital Footprints">
+            <div class="card-img-overlay">
+              <span class="card-title moduleCardTitle">
+                Shaping Your Digital Footprint
+              </span>
+            </div>
+          </div>
+          <div class="card-body">
+            <span class="card-text">
+              This lesson teaches how actions on social media
+              create a digital footprint and skills to positively
+              shape digital footprints.
+            </span>
+            <br>
+            <br>
+            <span class="card-text">
+              <span class="card-text">
+                Aligned with Common Sense Education's Digital
+                Citizenship lesson:
+                <a href="https://www.commonsense.org/education/digital-citizenship/lesson/social-media-and-digital-footprints-our-responsibilities" target="_blank">
+                  Social Media and Digital Footprints
+                </a>
+              </span>
+            </span>
+          </div>
+        </div>
+      </div>
+      <div class="row paddedTop d-sm-block d-md-none">
+        <div class="card" style="width: 18rem;">
+          <div class="container cardImgContainer">
+            <img class="card-img-top" id="heightReference" src="/img/onlineidentity.jpg" alt="Online Identities">
+            <div class="card-img-overlay">
+              <span class="card-title moduleCardTitle">
+                Online Identities
+              </span>
+            </div>
+          </div>
+          <div class="card-body">
+            <span class="card-text">
+              This lesson teaches how to manage self-presentation
+              and how online identities can change with
+              different audiences.
+            </span>
+            <br>
+            <br>
+            <span class="card-text">
+              <span class="card-text">
+                Aligned with Common Sense Education's Digital
+                Citizenship lesson:
+                <a href="https://www.commonsense.org/education/digital-citizenship/lesson/who-are-you-online" target="_blank">
+                  Who Are You Online?
+                </a>
+              </span>
+            </span>
+          </div>
+        </div>
+      </div>
+      <div class="row paddedTop d-sm-block d-md-none">
+        <div class="card" style="width: 18rem;">
+          <div class="container cardImgContainer">
+            <img class="card-img-top" id="heightReference" src="/img/smprivacy.jpg" alt="Social Media Privacy">
+            <div class="card-img-overlay">
+              <span class="card-title moduleCardTitle">Social Media Privacy</span>
+            </div>
+          </div>
+          <div class="card-body">
+            <span class="card-text">
+              This lesson teaches how social media sites collect
+              information about users and offers strategies for
+              protecting privacy.
+            </span>
+            <br>
+            <br>
+            <span class="card-text">
+              <span class="card-text">
+                Aligned with Common Sense Education's Digital
+                Citizenship lesson:
+                <a href="https://www.commonsense.org/education/digital-citizenship/lesson/being-aware-of-what-you-share" target="_blank">
+                  Being Aware of What You Share
+                </a>
+              </span>
+            </span>
+          </div>
+        </div>
+      </div>
+      <div class="row paddedTop d-sm-block d-md-none">
+        <div class="card" style="width: 18rem;">
+          <div class="container cardImgContainer">
+            <img class="card-img-top" id="heightReference" src="/img/news.jpg" alt="Fake News">
+            <div class="card-img-overlay">
+              <span class="card-title moduleCardTitle">
+                News in Social Media
+              </span>
+            </div>
+          </div>
+          <div class="card-body">
+            <span class="card-text">
+              This lesson teaches why fake news exists and how to
+              identify the telltale signs of fake news on social
+              media.
+            </span>
+            <br>
+            <br>
+            <span class="card-text">
+              <span class="card-text">
+                Aligned with Common Sense Education's Digital
+                Citizenship lesson:
+                <a href="https://www.commonsense.org/education/digital-citizenship/lesson/finding-credible-news" target="_blank">
+                  Finding Credible News
+                </a>
+              </span>
+            </span>
+          </div>
+        </div>
+      </div>
+      <div class="row paddedTop d-sm-block d-md-none">
+        <div class="card" style="width: 18rem;">
+          <div class="container cardImgContainer">
+            <img class="card-img-top" id="heightReference" src="/img/targetedads.png" alt="Targeted Advertising">
+            <div class="card-img-overlay">
+              <span class="card-title moduleCardTitle">Targeted Advertising</span>
+            </div>
+          </div>
+          <div class="card-body">
+            <span class="card-text">
+              This lesson teaches ...
+            </span>
+            <br>
+            <br>
+            <span class="card-text">
+              <span class="card-text">
+                Aligned with Common Sense Education's Digital
+                Citizenship lesson:
+                <a href="" target="_blank">
+                  Link Name
+                </a>
+              </span>
+            </span>
+          </div>
+        </div>
+      </div>
+      <div class="row paddedTop d-sm-block d-md-none">
+        <div class="card" style="width: 18rem;">
+          <div class="container cardImgContainer">
+            <img class="card-img-top" id="heightReference" src="/img/smhabits.jpeg" alt="Healthy Social Media Habits">
+            <div class="card-img-overlay">
+              <span class="card-title moduleCardTitle">
+                Healthy Social Media Habits
+              </span>
+            </div>
+          </div>
+          <div class="card-body">
+            <span class="card-text">
+              This lesson teaches ...
+            </span>
+            <br>
+            <br>
+            <span class="card-text">
+              <span class="card-text">
+                Aligned with Common Sense Education's Digital
+                Citizenship lesson:
+                <a href="" target="_blank">
+                  Link Name
+                </a>
+              </span>
+            </span>
+          </div>
+        </div>
+      </div>
+      <div class="row paddedTop d-sm-block d-md-none">
+        <div class="card" style="width: 18rem;">
+          <div class="container cardImgContainer">
+            <img class="card-img-top" id="heightReference" src="/img/phishing.jpeg" alt="Phishing">
+            <div class="card-img-overlay">
+              <span class="card-title moduleCardTitle">Phishing</span>
+            </div>
+          </div>
+          <div class="card-body">
+            <span class="card-text">
+              This lesson teaches ...
+            </span>
+            <br>
+            <br>
+            <span class="card-text">
+              <span class="card-text">
+                Aligned with Common Sense Education's Digital
+                Citizenship lesson:
+                <a href="" target="_blank">
+                  Link Name
+                </a>
+              </span>
+            </span>
+          </div>
+        </div>
+      </div>
+
 
     <!-- Contact us section -->
 
