--- a/index.html
+++ b/index.html
@@ -2,35 +2,25 @@
 
 <html>
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- <meta name='twitter:title' content="Social Media TestDrive">
-    <meta name='twitter:description' content="Welcome to the Social Media TestDrive official website!">
-    <meta name='twitter:image' content='https://dhpd030vnpk29.cloudfront.net/squareLogo.png'>
-    <meta property='og:url' content='https://socialmediatestdrive.org/'>
-    <meta property='og:title' content="Social Media TestDrive">
-    <meta property='og:description' content='Welcome to the Social Media TestDrive official website!'>
-    <meta property='og:image' content='https://dhpd030vnpk29.cloudfront.net/squareLogo.png'>
-    <meta name='twitter:card' content="summary"> -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="styles/all.css" media="all">
+  <link rel="stylesheet" type="text/css" href="styles/index.css" media="all">
+  <link rel="stylesheet" type="text/css" href="styles/header.css" media="all">
+  <link rel="stylesheet" type="text/css" href="styles/footer.css" media="all">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="styles/all.css" media="all">
-    <link rel="stylesheet" type="text/css" href="styles/index.css" media="all">
-    <link rel="stylesheet" type="text/css" href="styles/header.css" media="all">
-    <link rel="stylesheet" type="text/css" href="styles/footer.css" media="all">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145467622-3"></script>
+  <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145467622-3"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'UA-145467622-3');
-    </script>
-    <link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
-    <title>TestDrive</title>
+  gtag('config', 'UA-145467622-3');
+  </script>
 </head>
+
 <body>
   <!-- REDUNDANT, DELETE ONCE SERVER SET UP/FIXED -->
   <header>
@@ -39,7 +29,7 @@
         <img src="/img/testDriveLogo.svg" width="110px" height="110px" class="d-inline-block align-top testDriveLogo" alt="">
       </a>
       <a class="navbar-brand fancy" href="index.html">
-        Test<span class="fancy-color">Drive</span>
+        Test<span class="brand">Drive</span>
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse"
         data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -78,7 +68,27 @@
           <img id="home_img" src="img/home_1.svg" alt="home graphic">
         </div>
       </div>
+
+      <!-- Row 1 -->
+      <div class="row align-items-center paddedRow">
+        <div class="col-md-6">
+          <h1>Education for the <span class="brand">digital age</span></h1>
+          <h4> Everyone remembers the teacher who made a difference in their
+            life, especially with sensitive topics like bullying.
+          </h4>
+          <h4> With communication tools like Reflections, TestDrive helps you
+            lead <b>open, meaningful conversations</b> with students.
+          </h4>
+
+        </div>
+        <div class='col-md-6'>
+          <img class="margined-left educators_image" src="img/educators_3.png">
+        </div>
+      </div>
+
     </div>
+
+
 
     <!-- <div class="section2 container">
       <div class="row justify-content-center">
