--- a/for_parents.html
+++ b/for_parents.html
@@ -29,7 +29,7 @@
         <img src="/img/testDriveLogo.svg" width="110px" height="110px" class="d-inline-block align-top testDriveLogo" alt="">
       </a>
       <a class="navbar-brand fancy" href="index.html">
-        Test<span class="fancy-color">Drive</span>
+        Test<span class="brand">Drive</span>
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse"
         data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
