home product section 1

--- a/index.html
+++ b/index.html
@@ -72,17 +72,17 @@
       <!-- Row 1 -->
       <div class="row align-items-center paddedRow">
         <div class="col-md-6">
-          <h1>Education for the <span class="brand">digital age</span></h1>
-          <h4> Everyone remembers the teacher who made a difference in their
-            life, especially with sensitive topics like bullying.
+          <h1>Education for the <span class="blue_accent">digital age</span></h1>
+          <h4> TestDrive simulates <b>realistic digital dilemmas and scenarios</b>
+            that young people may encounter as they enter the social media world.
           </h4>
-          <h4> With communication tools like Reflections, TestDrive helps you
-            lead <b>open, meaningful conversations</b> with students.
+          <h4> Each lesson teaches <b>essential digital citizenship concepts</b>,
+            covering topics such as privacy, online identities, cyberbullying, and more.
           </h4>
 
         </div>
         <div class='col-md-6'>
-          <img class="margined-left educators_image" src="img/educators_3.png">
+          <img class="margined-left home_product1" src="img/home_2.png">
         </div>
       </div>
 
