assets & completed home product (1 & 2), educators, and parents

--- a/index.html
+++ b/index.html
@@ -86,6 +86,57 @@
         </div>
       </div>
 
+      <!-- Row 2 -->
+      <div class="row align-items-center paddedRow">
+        <div class="col-md-6">
+          <img class="home_product2" src="img/home_3.png">
+        </div>
+        <div class='col-md-6 paddedLeft'>
+          <h1> Prepare kids for the <span class="blue_accent">online world</span></h1>
+          <h4> TestDrive is targeted for <b>middle school-aged youth</b> (ages 9–13)
+            who are likely enter into the social media world <b>in the near future</b>.
+          </h4>
+          <h4> TestDrive lessons can be done individually, in pairs, or as a
+            guided group activity in educational settings to facilitate learning
+             outcomes.
+          </h4>
+        </div>
+      </div>
+
+      <!-- Row 3 -->
+      <div class="row align-items-center paddedRow">
+        <div class="col-md-6">
+          <h1>A trusted resource for the classroom</h1>
+          <h4> Educators can use TestDrive to <b>engage with students</b> and spark
+            conversations around what it means to be prosocial and ethical
+            citizens online.
+          </h4>
+          <h4> TestDrive’s lessons are aligned with <b>Common Sense Education</b> to
+            provide a curriculum that covers emerging topics in digital literacy.
+          </h4>
+
+        </div>
+        <div class='col-md-6'>
+          <img class="margined-left home_educators" src="img/home_educators.svg">
+        </div>
+      </div>
+
+      <!-- Row 4 -->
+      <div class="row align-items-center paddedRow">
+        <div class="col-md-6">
+          <img class="home_parents" src="img/home_parents.svg">
+        </div>
+        <div class='col-md-6 paddedLeft'>
+          <h1> Great for parents, too</h1>
+          <h4> TestDrive lessons can be completed from the <b>comfort of your own
+            home</b>, and we encourage parents to try it out with their children.
+          </h4>
+          <h4> We <b>do not store or collect</b> any personal or identifying
+            information, so your child’s data will always be safe on our platform.
+          </h4>
+        </div>
+      </div>
+
     </div>
 
 
