--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <div class="col-md-6">
           <img class="home_parents" src="img/home_parents.svg">
         </div>
-        <div class='col-md-6 paddedLeft'>
+        <div class='col-md-6'>
           <h1> Great for parents, too</h1>
           <h4> TestDrive lessons can be completed from the <b>comfort of your own
             home</b>, and we encourage parents to try it out with their children.
@@ -139,7 +139,21 @@
 
     </div>
 
+    <div class="container">
+      <div class="row paddedRow justify-content-center">
+        <div class="col text-center">
+          <h1> Ready to get started? </h1>
+        </div>
+      </div>
 
+      <div class="row justify-content-center" style="padding-bottom:2em;">
+        <div class="col d-flex justify-content-center">
+          <button type="button" class="nicelyRoundedButton" onclick="window.location.href = 'modules.html';">
+            Take a TestDrive
+          </button>
+        </div>
+      </div>
+    </div>
 
     <!-- <div class="section2 container">
       <div class="row justify-content-center">
