finish home except 3 graphics section

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div class="section1 container">
       <div class="row align-items-center">
         <div id="intro" class="col-sm">
-          <h1>Practice digital literacy through a <span class="blue_accent">social media simulation</span>.</h1>
+          <h1>Practice digital literacy through a <span class="blue_accent">social media simulation.</span></h1>
           <h4>Social Media TestDrive lets young people practice digital citizenship skills in a simulated, realistic social media environment.</h4>
           <button id="homePage_button" type="button" onclick="window.location.href = 'modules.html';">View Modules </button>
         </div>
