New module photos, css changes and cleanup

--- a/modules.html
+++ b/modules.html
@@ -29,7 +29,7 @@
       <a href="index.html">
         <img src="/img/testDriveLogo.svg" width="110px" height="110px" class="d-inline-block align-top testDriveLogo" alt="">
       </a>
-      <a class="navbar-brand fancy" href="index.html">
+      <a class="navbar-brand fancy d-none d-md-inline-block" href="index.html">
         Test<span class="brand">Drive</span>
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -60,7 +60,7 @@
   <main>
     <div class='container'>
       <!-- Title -->
-      <div class="row paddedRow justify-content-center">
+      <div class="row justify-content-center" style="padding-top:3em;">
         <div class="col-lg-8 text-center">
           <h1> The best way to navigate the digital world. </h1>
         </div>
@@ -153,7 +153,7 @@
                     <a href="https://app.socialmediatestdrive.org/intro/safe-posting" class="lessonCardLink" target="_none">
                       <div class="card" style="width: 18rem;">
                         <div class="container cardImgContainer">
-                          <img class="card-img-top" id="heightReference" src="/img/privateinfo.jpg" alt="Private Information">
+                          <img class="card-img-top" id="heightReference" src="/img/privateinfo.png" alt="Private Information">
                           <div class="card-img-overlay">
                             <span class="card-title moduleCardTitle">
                               Is It Private Information?
@@ -183,7 +183,7 @@
                     <a href="https://app.socialmediatestdrive.org/intro/digfoot" class="lessonCardLink" target="_none">
                       <div class="card" style="width: 18rem;">
                         <div class="container cardImgContainer">
-                          <img class="card-img-top" id="heightReference" src="/img/digfoot.jpg" alt="Digital Footprints">
+                          <img class="card-img-top" id="heightReference" src="/img/digfoot.png" alt="Digital Footprints">
                           <div class="card-img-overlay">
                             <span class="card-title moduleCardTitle">
                               Shaping Your Digital Footprint
@@ -215,7 +215,7 @@
                     <a href="https://app.socialmediatestdrive.org/intro/presentation" class="lessonCardLink" target="_none">
                       <div class="card" style="width: 18rem;">
                         <div class="container cardImgContainer">
-                          <img class="card-img-top" id="heightReference" src="/img/onlineidentity.jpg" alt="Online Identities">
+                          <img class="card-img-top" id="heightReference" src="/img/onlineidentity.png" alt="Online Identities">
                           <div class="card-img-overlay">
                             <span class="card-title moduleCardTitle">
                               Online Identities
@@ -247,7 +247,7 @@
                     <a href="https://app.socialmediatestdrive.org/intro/privacy" class="lessonCardLink" target="_none">
                       <div class="card" style="width: 18rem;">
                         <div class="container cardImgContainer">
-                          <img class="card-img-top" id="heightReference" src="/img/smprivacy.jpg" alt="Social Media Privacy">
+                          <img class="card-img-top" id="heightReference" src="/img/smprivacy.png" alt="Social Media Privacy">
                           <div class="card-img-overlay">
                             <span class="card-title moduleCardTitle">Social Media Privacy</span>
                           </div>
@@ -277,7 +277,7 @@
                     <a href="https://app.socialmediatestdrive.org/intro/digital-literacy" class="lessonCardLink" target="_none">
                       <div class="card" style="width: 18rem;">
                         <div class="container cardImgContainer">
-                          <img class="card-img-top" id="heightReference" src="/img/news.jpg" alt="Fake News">
+                          <img class="card-img-top" id="heightReference" src="/img/news.png" alt="Fake News">
                           <div class="card-img-overlay">
                             <span class="card-title moduleCardTitle">
                               News in Social Media
@@ -342,7 +342,7 @@
                     <a href="https://app.socialmediatestdrive.org/intro/habits" class="lessonCardLink" target="_none">
                       <div class="card" style="width: 18rem;">
                         <div class="container cardImgContainer">
-                          <img class="card-img-top" id="heightReference" src="/img/smhabits.jpeg" alt="Healthy Social Media Habits">
+                          <img class="card-img-top" id="heightReference" src="/img/smhabits.png" alt="Healthy Social Media Habits">
                           <div class="card-img-overlay">
                             <span class="card-title moduleCardTitle">
                               Healthy Social Media Habits
@@ -372,7 +372,7 @@
                     <a href="https://app.socialmediatestdrive.org/intro/phishing" class="lessonCardLink" target="_none">
                       <div class="card" style="width: 18rem;">
                         <div class="container cardImgContainer">
-                          <img class="card-img-top" id="heightReference" src="/img/phishing.jpeg" alt="Phishing">
+                          <img class="card-img-top" id="heightReference" src="/img/phishing.png" alt="Phishing">
                           <div class="card-img-overlay">
                             <span class="card-title moduleCardTitle">Phishing</span>
                           </div>
@@ -441,7 +441,7 @@
         <a href="https://app.socialmediatestdrive.org/intro/safe-posting" class="lessonCardLink" target="_none">
           <div class="card" style="width: 18rem;">
             <div class="container cardImgContainer">
-              <img class="card-img-top" id="heightReference" src="/img/privateinfo.jpg" alt="Private Information">
+              <img class="card-img-top" id="heightReference" src="/img/privateinfo.png" alt="Private Information">
               <div class="card-img-overlay">
                 <span class="card-title moduleCardTitle">
                   Is It Private Information?
@@ -471,7 +471,7 @@
         <a href="https://app.socialmediatestdrive.org/intro/digfoot" class="lessonCardLink" target="_none">
           <div class="card" style="width: 18rem;">
             <div class="container cardImgContainer">
-              <img class="card-img-top" id="heightReference" src="/img/digfoot.jpg" alt="Digital Footprints">
+              <img class="card-img-top" id="heightReference" src="/img/digfoot.png" alt="Digital Footprints">
               <div class="card-img-overlay">
                 <span class="card-title moduleCardTitle">
                   Shaping Your Digital Footprint
@@ -503,7 +503,7 @@
         <a href="https://app.socialmediatestdrive.org/intro/presentation" class="lessonCardLink" target="_none">
           <div class="card" style="width: 18rem;">
             <div class="container cardImgContainer">
-              <img class="card-img-top" id="heightReference" src="/img/onlineidentity.jpg" alt="Online Identities">
+              <img class="card-img-top" id="heightReference" src="/img/onlineidentity.png" alt="Online Identities">
               <div class="card-img-overlay">
                 <span class="card-title moduleCardTitle">
                   Online Identities
@@ -535,7 +535,7 @@
         <a href="https://app.socialmediatestdrive.org/intro/privacy" class="lessonCardLink" target="_none">
           <div class="card" style="width: 18rem;">
             <div class="container cardImgContainer">
-              <img class="card-img-top" id="heightReference" src="/img/smprivacy.jpg" alt="Social Media Privacy">
+              <img class="card-img-top" id="heightReference" src="/img/smprivacy.png" alt="Social Media Privacy">
               <div class="card-img-overlay">
                 <span class="card-title moduleCardTitle">Social Media Privacy</span>
               </div>
@@ -565,7 +565,7 @@
         <a href="https://app.socialmediatestdrive.org/intro/digital-literacy" class="lessonCardLink" target="_none">
           <div class="card" style="width: 18rem;">
             <div class="container cardImgContainer">
-              <img class="card-img-top" id="heightReference" src="/img/news.jpg" alt="Fake News">
+              <img class="card-img-top" id="heightReference" src="/img/news.png" alt="Fake News">
               <div class="card-img-overlay">
                 <span class="card-title moduleCardTitle">
                   News in Social Media
@@ -625,7 +625,7 @@
         <a href="https://app.socialmediatestdrive.org/intro/habits" class="lessonCardLink" target="_none">
           <div class="card" style="width: 18rem;">
             <div class="container cardImgContainer">
-              <img class="card-img-top" id="heightReference" src="/img/smhabits.jpeg" alt="Healthy Social Media Habits">
+              <img class="card-img-top" id="heightReference" src="/img/smhabits.png" alt="Healthy Social Media Habits">
               <div class="card-img-overlay">
                 <span class="card-title moduleCardTitle">
                   Healthy Social Media Habits
@@ -655,7 +655,7 @@
         <a href="https://app.socialmediatestdrive.org/intro/phishing" class="lessonCardLink" target="_none">
           <div class="card" style="width: 18rem;">
             <div class="container cardImgContainer">
-              <img class="card-img-top" id="heightReference" src="/img/phishing.jpeg" alt="Phishing">
+              <img class="card-img-top" id="heightReference" src="/img/phishing.png" alt="Phishing">
               <div class="card-img-overlay">
                 <span class="card-title moduleCardTitle">Phishing</span>
               </div>
@@ -744,12 +744,3 @@
 
 </body>
 </html>
-<!-- <html>
-    <body>
-      <div id="topNav"></div>
-
-      </div>
-      <div id="bottomNav"></div>
-      <script src="nav.js"></script>
-    </body>
-</html> -->
