--- a/faq.html
+++ b/faq.html
@@ -29,7 +29,7 @@
       <a href="index.html">
         <img src="/img/testDriveLogo.svg" width="110px" height="110px" class="d-inline-block align-top testDriveLogo" alt="">
       </a>
-      <a class="navbar-brand fancy" href="index.html">
+      <a class="navbar-brand fancy d-none d-md-inline-block" href="index.html">
         Test<span class="brand">Drive</span>
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -60,7 +60,7 @@
   <main>
     <div class='container'>
 
-      <div class="row paddedRow justify-content-center">
+      <div class="row justify-content-center" style="padding-top:3em; padding-bottom:15px;">
         <div class="col text-center">
           <h1> Got Questions? </h1>
         </div>
@@ -382,10 +382,7 @@
       </div>
     </div>
   </footer>
-  <!-- <footer class="footer">
-    <p id="footer-text">Social Media TestDrive</p>
-    <a id="footer-links" href="terms.html">Terms & Copyright</p>
-  </footer> -->
+
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
