--- a/for_parents.html
+++ b/for_parents.html
@@ -28,7 +28,7 @@
       <a href="index.html">
         <img src="/img/testDriveLogo.svg" width="110px" height="110px" class="d-inline-block align-top testDriveLogo" alt="">
       </a>
-      <a class="navbar-brand fancy" href="index.html">
+      <a class="navbar-brand fancy d-none d-md-inline-block" href="index.html">
         Test<span class="brand">Drive</span>
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse"
