--- a/header.html
+++ b/header.html
@@ -1,37 +1,11 @@
 <!DOCTYPE html>
-<!-- THIS IS NOT USED ANYWHERE -->
-<!-- <div class="topnav">
-  <div id="logo-container">
-    <a id="logo" href="index.html">Social TestDrive</a>
-  </div>
-
-  <div id="linksCont">
-    <a class="links" href="html/about.html"><p>About</p></a>
-    <a class="links" href="html/modules.html"><p>Modules</p></a>
-    <a class="links" href="html/for_educators.html"><p>For Educators</p></a>
-    <a class="links" href="html/for_parents.html"><p>For Parents</p></a>
-    <a class="links" href="html/faq.html"><p>FAQs</p><a>
-  </div>
-</div> -->
-
-<!-- <div class="header-container">
-  <div id="logo-container">
-    <a id="logo" href="index.html">Test<span id="logo_pt2">Drive</span></a>
-  </div>
-  <div class="navbar-container">
-    <a class="navbar-links" href="about.html"><p>About</p></a>
-    <a class="navbar-links" href="modules.html"><p>Modules</p></a>
-    <a class="navbar-links" href="for_educators.html"><p>For Educators</p></a>
-    <a class="navbar-links" href="for_parents.html"><p>For Parents</p></a>
-  </div>
-</div> -->
 
 <nav class="navbar navbar-expand-lg navbar-light">
 
   <a href="index.html">
     <img src="/img/testDriveLogo.svg" width="110px" height="110px" class="d-inline-block align-top testDriveLogo" alt="">
   </a>
-  <a class="navbar-brand fancy" href="index.html">
+  <a class="navbar-brand fancy d-none d-md-inline-block" href="index.html">
     Test<span class="brand">Drive</span>
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse"
