--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <a href="index.html">
         <img src="/img/testDriveLogo.svg" width="110px" height="110px" class="d-inline-block align-top testDriveLogo" alt="">
       </a>
-      <a class="navbar-brand fancy" href="index.html">
+      <a class="navbar-brand fancy d-none d-md-inline-block" href="index.html">
         Test<span class="brand">Drive</span>
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -58,13 +58,13 @@
 
   <main>
     <div class="section1 container">
-      <div class="row align-items-center">
-        <div id="intro" class="col-sm">
+      <div class="row paddedRow align-items-center">
+        <div id="intro" class="col-md-6">
           <h1>Practice digital literacy through a <span class="blue_accent">social media simulation.</span></h1>
           <h4>Social Media TestDrive lets young people practice digital citizenship skills in a simulated, realistic social media environment.</h4>
-          <button id="homePage_button" type="button" onclick="window.location.href = 'modules.html';">View Modules </button>
+          <button class="nicelyRoundedButton" type="button" onclick="window.location.href = 'modules.html';">View Modules </button>
         </div>
-        <div id="home_graphic" class="col-sm-6">
+        <div id="home_graphic" class="col-md-6">
           <img id="home_img" src="img/home_1.svg" alt="home graphic">
         </div>
       </div>
@@ -89,9 +89,9 @@
       <!-- Row 2 -->
       <div class="row align-items-center paddedRow">
         <div class="col-md-6">
-          <img class="home_product2" src="img/home_3.png">
+          <img class="margined-right home_product2" src="img/home_3.png">
         </div>
-        <div class='col-md-6 paddedLeft'>
+        <div class='col-md-6'>
           <h1> Prepare kids for the <span class="blue_accent">online world</span></h1>
           <h4> TestDrive is targeted for <b>middle school-aged youth</b> (ages 9–13)
             who are likely enter into the social media world <b>in the near future</b>.
