Added 'Our Vision' section to home page

--- a/index.html
+++ b/index.html
@@ -69,6 +69,45 @@
         </div>
       </div>
 
+      <!-- Row: Our Mission -->
+      <div class="row justify-content-center">
+        <div class="col-md-6 text-center">
+          <h1>Our Vision</h1>
+          <h4>
+              We hope to provide a kind, safe social media environment for kids
+              to connect and engage.
+          </h4>
+        </div>
+      </div>
+
+      <!-- Row: Mission Icons -->
+      <div class="row justify-content-center" style="padding-bottom:3em;">
+        <div class="col-md-4 text-center">
+          <img src="img/home_safety.svg">
+          <h1 class="trioTitle">Safety first</h1>
+          <h4 class="trioSubtitle">
+            TestDrive is a simulation, so kids can learn online behavior without
+            real-life consequences.
+          </h4>
+        </div>
+        <div class="col-md-4 text-center">
+          <img src="img/home_essential.svg">
+          <h1 class="trioTitle">Essential topics</h1>
+          <h4 class="trioSubtitle">
+            Lessons cover a broad range of skills for digital literacy and
+            online behavior relevant to today's kids.
+          </h4>
+        </div>
+        <div class="col-md-4 text-center">
+          <img src="img/home_free.svg">
+          <h1 class="trioTitle">100% free</h1>
+          <h4 class="trioSubtitle">
+            TestDrive is a free, constantly-updated resource for educators
+            to incorporate into their classrooms and cirriculum.
+          </h4>
+        </div>
+      </div>
+
       <!-- Row 1 -->
       <div class="row align-items-center paddedRow">
         <div class="col-md-6">
