Minor formatting fix to home page

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <!-- Row: Mission Icons -->
       <div class="row justify-content-center" style="padding-bottom:3em;">
         <div class="col-md-4 text-center">
-          <img src="img/home_safety.svg">
+          <img class="trioImage" src="img/home_safety.svg">
           <h1 class="trioTitle">Safety first</h1>
           <h4 class="trioSubtitle">
             TestDrive is a simulation, so kids can learn online behavior without
@@ -91,7 +91,7 @@
           </h4>
         </div>
         <div class="col-md-4 text-center">
-          <img src="img/home_essential.svg">
+          <img class="trioImage" src="img/home_essential.svg">
           <h1 class="trioTitle">Essential topics</h1>
           <h4 class="trioSubtitle">
             Lessons cover a broad range of skills for digital literacy and
@@ -99,7 +99,7 @@
           </h4>
         </div>
         <div class="col-md-4 text-center">
-          <img src="img/home_free.svg">
+          <img class="trioImage" src="img/home_free.svg">
           <h1 class="trioTitle">100% free</h1>
           <h4 class="trioSubtitle">
             TestDrive is a free, constantly-updated resource for educators
